search: POST+GET -> GET architecture | jepria-rest branch: refactor/search
